# django_certo

./: db.sqlite3  docker-compose.yml  pyproject.toml
projetoteste/: asgi.py  settings.py  urls.py  wsgi.py
teste/: admin.py
