[tool.poetry]
name = "django_certo"
version = "0.1.0"
description = ""
authors = ["Helena Kopp <helena.kopp@olist.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.3"
psycopg2-binary = "^2.8.6"
postgres = "^3.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
